@@ -25,9 +25,12 @@ data.matrix(frame, rownames.force = NA)
     zero-row data frame.}
 }
 \details{
-  Supplying a data frame with columns which are not numeric, factor or logical
-  is an error.  A warning is given if any non-factor column has a class,
-  as then information can be lost.
+  Logical and factor columns are converted to integers.  Any other
+  column which is not numeric (according to \code{\link{is.numeric}}) is
+  converted by \code{\link{as.numeric}} or, for S4 objects,
+  \code{\link{as}(, "numeric")}.  If all columns are integer (after
+  conversion) the result is an integer natrix, otherwise a numeric
+  (double) matrix.
 }
 \value{
   If \code{frame} inherits from class \code{"data.frame"}, an integer or
@@ -57,6 +60,6 @@ DF <- data.frame(a=1:3, b=letters[10:12],
                  c=seq(as.Date("2004-01-01"), by = "week", len = 3),
                  stringsAsFactors = TRUE)
 data.matrix(DF[1:2])
-try(data.matrix(DF)) # fails as a Date is not numeric
+data.matrix(DF)
 }
 \keyword{array}
